Update in tex due roll no misplace

--- a/Project015.tex
+++ b/Project015.tex
@@ -305,11 +305,11 @@ All the authors belong to Indian Institute of Information Technology, Sri City.
 \textbf{Contributions}
 
 \begin{enumerate}
-    \item \label{author:anjali} \textbf{Anjali Kumari:} Data preprocessing and Exploratory Data Analysis.
-    \item \label{author:sreevallabh} \textbf{Sreevallabh Karanam:} Model Building, Model Training, Performance Analysis.
-    \item \label{author:bhanu} \textbf{Bhanu Prakash Bhaskarla:} Model Building, Model Training, Performance Analysis.
-    \item \label{author:pranesh} \textbf{Pranesh S:} Data Transformation and Feature Scaling.
-    \item \label{author:abhinav} \textbf{Abhinav Mars:} \textit{k}-fold Cross Validation and Further Improvements.
+    \item \textbf{\hyperref[author:anjali]{Anjali Kumari}:} Data preprocessing and Exploratory Data Analysis.
+    \item \textbf{\hyperref[author:sreevallabh]{Sreevallabh Karanam}:} Model Building, Model Training, Performance Analysis.
+    \item \textbf{\hyperref[author:bhanu]{Bhanu Prakash Bhaskarla}:} Model Building, Model Training, Performance Analysis.
+    \item \textbf{\hyperref[author:pranesh]{Pranesh S}:} Data Transformation and Feature Scaling.
+    \item \textbf{\hyperref[author:abhinav]{Abhinav Mars}:} \textit{k}-fold Cross Validation and Further Improvements.
 \end{enumerate}
 
 \subsection{Bibliography}\label{bibliography}
